syntax = "proto3";

package todolist.v1;

import "google/protobuf/timestamp.proto";

message TodoItem {
  string description = 1;
  google.protobuf.Timestamp due_date = 2;
  bool completed = 3;
}

message TodoList {
  string title = 1;
  string owner = 2;
  map<string, TodoItem> items = 3;
}
