syntax = "proto3";

package todolist.v1;

import "google/api/annotations.proto";
import "todolist/v1/todo_list.proto";

service TodoListService {
  rpc CreateTodoList(CreateTodoListRequest) returns (CreateTodoListResponse) {
    option (google.api.http) = {
      post: "/v1/todoLists"
      body: "list"
    };
  }

  rpc GetTodoList(GetTodoListRequest) returns (GetTodoListResponse) {
    option (google.api.http) = {get: "/v1/todoLists/{todo_list_id}"};
  }

  rpc AddTodoItem(AddTodoItemRequest) returns (AddTodoItemResponse) {
    option (google.api.http) = {
      post: "/v1/todoLists/{todo_list_id}/items"
      body: "item"
    };
  }

  rpc ToggleTodoItem(ToggleTodoItemRequest) returns (ToggleTodoItemResponse) {
    option (google.api.http) = {post: "/v1/todoList/{todo_list_id}/items/{todo_item_id}/toggle"};
  }

  rpc DeleteTodoItem(DeleteTodoItemRequest) returns (DeleteTodoItemResponse) {
    option (google.api.http) = {delete: "/v1/todoList/{todo_list_id}/items/{todo_item_id}"};
  }
}

message CreateTodoListRequest {
  string title = 1;
  string owner = 2;
}

message CreateTodoListResponse {
  string todo_list_id = 1;
}

message GetTodoListRequest {
  string todo_list_id = 1;
}

message GetTodoListResponse {
  TodoList todo_list = 1;
}

message AddTodoItemRequest {
  string todo_list_id = 1;
  TodoItem todo_item = 2;
}

message AddTodoItemResponse {
  string todo_item_id = 1;
}

message ToggleTodoItemRequest {
  string todo_list_id = 1;
  string todo_item_id = 2;
}

message ToggleTodoItemResponse {}

message DeleteTodoItemRequest {
  string todo_list_id = 1;
  string todo_item_id = 2;
}

message DeleteTodoItemResponse {}
